tests/syntax_error/missing_end_quote_in_string.jou
import "stdlib/io.jou"

# Output: compiler error in file "tests/syntax_error/missing_end_quote_in_string.jou", line 5: missing " to end the string
def main() -> int:
    printf("Hello)
    return 0
